syntax = "proto3";

package lowkey.v1;

option go_package = "github.com/pixperk/lowkey/api/v1";

service LockService{
    //lease operations
    rpc CreateLease(CreateLeaseRequest) returns (CreateLeaseResponse);
    rpc RenewLease(RenewLeaseRequest) returns (RenewLeaseResponse);

    //heartbeat is a bi-directional streaming rpc to keep the lease alive
    rpc Heartbeat(stream HeartbeatRequest) returns (stream HeartbeatResponse);

    //lock operations
    rpc AcquireLock(AcquireLockRequest) returns (AcquireLockResponse);
    rpc ReleaseLock(ReleaseLockRequest) returns (ReleaseLockResponse);

    //cluster status
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
}

message CreateLeaseRequest {
  string owner_id = 1;      
  int64 ttl_seconds = 2;    
}

message CreateLeaseResponse {
  uint64 lease_id = 1;      
  int64 ttl_seconds = 2;    
}

message RenewLeaseRequest {
  uint64 lease_id = 1;      
}

message RenewLeaseResponse {
  int64 ttl_seconds = 1;
}

message HeartbeatRequest {
  uint64 lease_id = 1;      
}
message HeartbeatResponse {
  uint64 lease_id = 1;      
  int64 ttl_seconds = 2;    
}

message AcquireLockRequest {
  string lock_name = 1;     
  string owner_id = 2;      
  uint64 lease_id = 3;      
}

message AcquireLockResponse {
  uint64 fencing_token = 1;
  int64 lease_ttl_seconds = 2;
}

message ReleaseLockRequest {
  string lock_name = 1;     
  uint64 lease_id = 2;      
}

message ReleaseLockResponse {
  bool released = 1;        
}

message GetStatusRequest {
  // No parameters needed
}

message GetStatusResponse {
  string node_id = 1;           // This node's ID
  bool is_leader = 2;           // Is this node the leader?
  string leader_address = 3;    // Current leader address
  int32 cluster_size = 4;       // Number of nodes in cluster
  string state = 5;             // Raft state: "leader", "follower", "candidate"
  Stats stats = 6;              // FSM statistics
}

message Stats {
  int32 leases = 1;             // Number of active leases
  int32 locks = 2;              // Number of active locks
  uint64 fencing_counter = 3;   // Current fencing counter value
}